# ampl2omt-python

./: README.md  pyproject.toml
src/ampl2omt/: main.py
src/ampl2omt/parsing/: builder.py  nlparser.py  stream.py
src/ampl2omt/problem/: objective.py  problem.py
src/ampl2omt/term/: manager.py  term.py
src/ampl2omt/writing/: smtlibwriter.py
src/nl_omt/: nlparser.py
src/nl_omt/expression/: factory.py  node.py
src/nl_omt/parsing/: builder.py  nlparser.py  stream.py
src/nl_omt/problem/: constraints.py  objective.py  problem.py
src/nl_omt/term/: manager.py  term.py  types.py
src/nl_omt/writing/: smtlibwriter.py
tests/: test_nlparser.py
tests/test_expression/: test_factory.py  test_manager.py
tests/test_parser/: conftest.py  test_expression.py  test_header.py  test_segment.py
tests/unit/: conftest.py
tests/unit/test_expression/: test_manager.py
tests/unit/test_parser/: conftest.py  hs085.nl  test_expression.py  test_header.py  test_problem.py  test_segment.py
tests/unit/test_writer/: conftest.py  test_writer.py
